# health-data-portal

./: .gitignore  .gitleaks.toml  CODEOWNERS  README.md  SECURITY.md  openkbs.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
api/: Dockerfile  README.md  pyproject.toml
api/api/: formats.py  main.py  repository.py
api/tests/: conftest.py  test_api.py  test_auth.py  test_secrets.py  test_security.py  test_ssrf.py
catalog/: README.md
catalog/ckan/: Dockerfile
catalog/sync/: README.md  ckan_sync.py
docs/: review-model.md  security-architecture.md
frontend/: Dockerfile  middleware.ts  next.config.mjs  package-lock.json  package.json
frontend/__tests__/: api.test.ts  chart.test.tsx  dataset-search.test.tsx
frontend/app/: globals.css  robots.ts  sitemap.ts
frontend/components/: AccessibilityWidget.tsx  BarChart.tsx  CollectionExplorer.tsx  SiteFooter.tsx  (+3 more)
health-data-portal/: .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md
health-data-portal/api/: README.md  pyproject.toml
health-data-portal/api/api/: __init__.py  repository.py
health-data-portal/api/tests/: test_api.py  test_repository.py
infra/: .env.example  README.md  docker-compose.yml  smoke.sh
ingestion/: README.md  pyproject.toml
ingestion/ingestion/: __init__.py  audit.py  collections.py  disclosure.py  models.py  pipeline.py  xls.py  xlsx.py
ingestion/ingestion/anonymization/: __init__.py  pseudonymize.py
ingestion/ingestion/dcat/: build.py  validate.py
ingestion/ingestion/loaders/: nhif_activities.py  nhif_hospital_drugs.py
ingestion/tests/: _xls_writer.py  test_anonymization.py  test_audit.py  test_collections.py  test_disclosure.py  test_nhif_drugs_loader.py  test_nhif_loader.py  test_pipeline.py  test_schema.py  test_validate.py  test_xls.py
pilot/: README.md
site/: index.html
(+97 files in other folders)
