[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ohdp-ingestion"
version = "0.1.0"
description = "Приемна тръба на Портала за отворени данни в здравеопазването: схемна валидация, контрол на разкриването, версионирани неизменяеми снапшоти."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.6,<3",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "ruff>=0.4",
    "mypy>=1.9",
    "types-PyYAML>=6.0",
]

[project.scripts]
ohdp-ingest = "ingestion.pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ingestion*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
